--- a/PacketPID/Info.plist
+++ b/PacketPID/Info.plist
@@ -22,7 +22,12 @@
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2015年 baidu. All rights reserved.</string>
-	<key>OSBundleLibraries</key>
-	<dict/>
+    <key>OSBundleLibraries</key>
+    <dict>
+        <key>com.apple.kpi.bsd</key>
+        <string>14.5</string>
+        <key>com.apple.kpi.libkern</key>
+        <string>14.5</string>
+    </dict>
 </dict>
 </plist>
